--- a/index (1).html
+++ b/index (1).html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <h1>Hello Kawin Jeeva B</h1>
+    <h1>Kawin Jeeva B</h1>
 
     <!-- we will put our teact component inside this div -->
     <div id="root"></div>
